--- a/index.html
+++ b/index.html
@@ -4,8 +4,129 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Asosiy</title>
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
-	<body></body>
+	<body>
+		<header class="site-header">
+		<div class="container">
+		<div class="site-header__inner">
+		<a href="./index.html" class="site-header__inner-link">
+		<img src="./images/logo.svg" alt="bu saytni logotipi" class="link__logo">
+		</a>
+		<div class="left">
+			<ul class="site-header__inner__list">
+				<li class="list__item">
+				<a href="#" class="item__link">
+				Maqolalar <img src="./images/down2.svg" alt="orange down icon" class="link-down">
+				</a>
+				<ul class="maqolalar">
+					<li class="maqola">
+					<a href="./maqola.html" class="item-link__maqola">
+						Chorvoqdagi dachalar
+					</a>
+					</li>
+					<li class="maqola">
+					<a href="./toshkent.html" class="item-link__maqola">
+					Toshkentdagi mehmonxonalar
+					</a>
+					</li>
+					<li class="maqola">
+					<a href="./uzbek.html" class="item-link__maqola">
+						O‘zbekistonning dam olish maskanlari
+					</a>
+					</li>
+					</ul>
+				</li>
+				<li class="list__item">
+				<a href="#" class="item__link">
+				Biz haqimizda
+				</a>
+				</li>
+				</ul>
+				<ul class="site-header__inner__list-two">
+				<li class="list-item__two joytop">
+				<a href="#" class="item-link__two joytop2">
+				Joy Qo'shish
+				</a>
+				</li>
+				<li class="list-item__two">
+				<a href="#" class="item-link__two">
+				Kirish
+				</a>
+				</li>
+				<li class="list-item__two">
+				<a href="#" class="item-link__two">
+				Ro'yxatdan o'tish
+				</a>
+				</li>
+				<li class="list-item__two-uz">
+				<a href="#" class="item-link__two-uz">
+				uz <img src="./images/down.svg" alt="this down icon" class="link-down__two">
+				</a>
+				<ul class="uzru">
+				<li class="uz">
+				<a href="#" class="item-link__two-uz">
+				uz
+				</a>
+				</li>
+				<li class="uz">
+				<a href="#" class="item-link__two-uz">
+				ru
+				</a>
+				</li>
+				<li class="uz">
+				<a href="#" class="item-link__two-uz">
+				en
+				</a>
+				</li>
+				</ul>
+				</li>
+				</ul>
+		</div>
+		</div>
+		</div>
+		</header>
+		<main>
+		<section class="locations">
+		<div class="container">
+		<div class="locations__inner">
+		<ul class="locations__list">
+			<li class="locations__list-item dacha">
+				<div class="list-item__box"><a href="#" class="link">
+					<img src="./images/dacha.svg" alt="" class="list-item__box-img"><h4 class="list-item__box-title">Dacha</h4>
+				</a></div>
+			</li>
+			<li class="locations__list-item home">
+				<div class="list-item__box"><a href="#" class="link">
+					<img src="./images/domik.svg" alt="" class="list-item__box-img"><h4 class="list-item__box-title">Xonadonlar</h4>
+				</a></div>
+			</li>
+			<li class="locations__list-item hotel">
+				<div class="list-item__box"><a href="./hotels.html" class="link">
+					<img src="./images/hotel.svg" alt="" class="list-item__box-img"><h4 class="list-item__box-title">Mehmonxonalar</h4>
+				</a></div>
+			</li>
+			<li class="locations__list-item oromgoh">
+				<div class="list-item__box"><a href="#" class="link">
+					<img src="./images/oromgoh.svg" alt="" class="list-item__box-img"><h4 class="list-item__box-title">Oromgohlar</h4>
+				</a></div>
+			</li>
+			<li class="locations__list-item tour">
+				<div class="list-item__box"><a href="#" class="link">
+					<img src="./images/tour.svg" alt="" class="list-item__box-img"><h4 class="list-item__box-title">Sayohat</h4>
+				</a></div>
+			</li>
+			<li class="locations__list-item extreme">
+				<div class="list-item__box"><a href="#" class="link">
+					<img src="./images/extreme.svg" alt="" class="list-item__box-img"><h4 class="list-item__box-title">Ekstrim</h4>
+				</a></div>
+			</li>
+		</ul>
+		</div>
+		</div>
+		</section>
+		</main>
+	</body>
+	<script src="./main.js"></script>
 </html>
